--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "code-runner.executorMap": {
-        "cpp": "cd $dir && g++ -std=c++17 $fileName -o $fileNameWithoutExt.out && $dir$fileNameWithoutExt.out",
+        "cpp": "cd $dir && g++ -std=c++2a $fileName -o $fileNameWithoutExt.out && $dir$fileNameWithoutExt.out",
         }
 }
